--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body{
+    background-color: lightgray;
+}
+
+th{
+    text-align: center;
+}
+
 .svg-center{
     text-align: center;
 }
@@ -13,6 +21,38 @@
 .box{
     width: 100%;
     box-sizing: border-box;
+    margin: auto;
+    padding: 0 5px;    
+}
+
+.button_div{
+    padding: 50px 25%;
+}
+
+
+
+h1{
+    text-align: center;
+    font-size: 2rem;
+}
+
+header{
+    margin-bottom: 20px;
+}
+
+.vert-align{
+    margin-top: 5%;
+}
+
+td{
+    text-transform: capitalize;
+}
+
+#pw-content::after{
+    content: "W";
+}
+
+.box{
     margin: 0 auto;
-    padding: 0 5px;
+    max-width: 700px;
 }
