Update- création de box pour formulaire

--- a/style.css
+++ b/style.css
@@ -18,12 +18,7 @@ th{
     fill: red;
 }
 
-.box{
-    width: 100%;
-    box-sizing: border-box;
-    margin: auto;
-    padding: 0 5px;    
-}
+
 
 .button_div{
     padding: 50px 25%;
@@ -52,8 +47,25 @@ td{
     content: "W";
 }
 
+
+
+
 .box{
+    box-sizing: border-box;
     margin: 0 auto;
-    max-width: 700px;
-    border: 1px solid black;
+    max-width: 500px;
+    border: 1px solid white;
+    box-shadow: -1px 11px 50px 9px rgba(0,0,0,0.37);
+    text-align: center;
+    margin-top: 100px;
+}
+
+.width-f{
+    min-width: 250px;
+    min-height: 40px;
+}
+
+#btn-back{
+    margin-right: 15px;
+    text-align: right;
 }
