--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ th,td{
     margin-right: 50px;
     cursor: default;
 }
+
+#action-bar{
+    display: flex;
+}
 #svg-bulb{
     fill: #f8ff40;
 }
